--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 
     <main class="root">
-        <div class="header-wrapper">
+        <!--
+        <aside class="header-wrapper">
             <header>
                 <div class="header-content">
                     <p class="header-text">About me</p>
@@ -21,7 +22,9 @@
                     <p class="header-text">Professional Services</p>
                 </div>
             </header>
-        </div>
+        </aside>
+        -->
+        
         <div class="content-wrapper">
             <div class="personal-information">
                 <h1 class="name">Andres Pachano</h1>
@@ -38,15 +41,17 @@
                     </div>
                 </div>
             </div>
-            <div class="social">
-                <h2 class="social-title">Social <span><img src="" alt="social-logo"></span></h2>
+            <h2 class="social-title">Social</h2>
+            <div class="social">                
                 <div class="github">
-                    <img src="" alt="github logo">
-                    <a href="https://github.com/PaxanoA" target="_blank">GitHub</a>
+                    <a href="https://github.com/PaxanoA" target="_blank">
+                        <img src="./static/images/github.webp" alt="github logo" class="logo" id="logo">
+                    </a>
                 </div>
                 <div class="linkedin">
-                    <img src="" alt="linkedin logo">
-                    <a href="https://www.linkedin.com/in/andrespachanop/" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/andrespachanop/" target="_blank">
+                        <img src="./static/images/linkedin.png" alt="linkedin logo" class="logo" id="logo">
+                    </a>
                 </div>
             </div>
             <div class="professional-expertise">
