--- a/index.html
+++ b/index.html
@@ -9,18 +9,41 @@
 <body>
     <main class="main main-content">
         <div class="nav-bar nav-wrapper">
-            <header>
                 <img src="./static/images/logo" alt="logo" class="logo-img">
                 <nav class="desktop nav-bar-nav">
                     <ul class="list">
-                        <li>About me</li>
-                        <li>Contact</li>
-                        <li>Expertise</li>
-                        <li>Social</li>
+                        <a href="#about"><li>About me</li></a>
+                        <a href="#contact"><li>Contact</li></a>
+                        <a href="#expertise"><li>Expertise</li></a>
+                        <a href="#social"><li>Social</li></a>
                     </ul>
-                </nav>
-            </header>
-            
+                </nav>    
+        </div>
+        <div class="content content-wrapper">
+            <div class="about" id="about">
+                <h1>Andres Pachano</h1>
+                <h5>Full stack web developer + Senior network expert</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Rem, voluptatibus eum eligendi amet cumque atque iure nobis
+                qui ad necessitatibus inventore similique! Officia soluta labore
+                magnam enim illo perferendis nemo?</p>
+            </div>
+            <div class="expertise" id="expertise">
+                <div class="project-wrapper">
+                    <div class="project">
+                        <img src="" alt="project image">
+                        <p>Description of the project</p>
+                    </div>
+                    <div class="project">
+                        <img src="" alt="project image">
+                        <p>Description of the project</p>
+                    </div>
+                    <div class="project">
+                        <img src="" alt="project image">
+                        <p>Description of the project</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
