--- a/index.html
+++ b/index.html
@@ -8,43 +8,21 @@
 </head>
 <body>
     <main class="main main-content">
-        <div class="nav-bar nav-wrapper">
-                <img src="./static/images/logo" alt="logo" class="logo-img">
-                <nav class="desktop nav-bar-nav">
-                    <ul class="list">
-                        <a href="#about"><li>About me</li></a>
-                        <a href="#contact"><li>Contact</li></a>
-                        <a href="#expertise"><li>Expertise</li></a>
-                        <a href="#social"><li>Social</li></a>
-                    </ul>
-                </nav>    
-        </div>
-        <div class="content content-wrapper">
-            <div class="about" id="about">
-                <h1>Andres Pachano</h1>
-                <h5>Full stack web developer + Senior network expert</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Rem, voluptatibus eum eligendi amet cumque atque iure nobis
-                qui ad necessitatibus inventore similique! Officia soluta labore
-                magnam enim illo perferendis nemo?</p>
-            </div>
-            <div class="expertise" id="expertise">
-                <div class="project-wrapper">
-                    <div class="project">
-                        <img src="" alt="project image">
-                        <p>Description of the project</p>
-                    </div>
-                    <div class="project">
-                        <img src="" alt="project image">
-                        <p>Description of the project</p>
-                    </div>
-                    <div class="project">
-                        <img src="" alt="project image">
-                        <p>Description of the project</p>
-                    </div>
+        <header>
+            <div class="header-wrapper">
+                <img src="./static/logo.png" alt="Logo" class="logo">
+                <div class="navbar">
+                    <nav>
+                        <ul class="nav-list nav-list-header">
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#projects">Projects</a></li>
+                            <li><a href="#social">Social</a></li>
+                            <li><a href="#patreon">Patreon</a></li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
-        </div>
+        </header>
     </main>
 </body>
 </html>
