Update logo image
Update logo image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main class="main main-content">
         <header>
             <div class="header-wrapper">
-                <img src="./static/logo.png" alt="Logo" class="logo">
+                <img src="./static/images/Logo.png" alt="Logo" class="logo">
                 <div class="navbar">
                     <nav>
                         <ul class="nav-list nav-list-header">
