--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
                 </div>
             </div>
         </header>
+        <div class="content content-wrapper">
+            <div class="about" id="about">
+                <h1>Andres Pachano</h1>
+                <h5>Full stack web developer + Senior network expert</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Rem, voluptatibus eum eligendi amet cumque atque iure nobis
+                qui ad necessitatibus inventore similique! Officia soluta labore
+                magnam enim illo perferendis nemo?</p>
+        </div>
     </main>
 </body>
 </html>
