--- a/index.html
+++ b/index.html
@@ -27,11 +27,30 @@
             <div class="about" id="about">
                 <h1>Andres Pachano</h1>
                 <h5>Full stack web developer + Senior network expert</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Rem, voluptatibus eum eligendi amet cumque atque iure nobis
-                qui ad necessitatibus inventore similique! Officia soluta labore
-                magnam enim illo perferendis nemo?</p>
+                <p>Howdy!! I'm Andres P. My friends call me Pachi, I enjoy coding
+                    and networking. I'm a full stack web developer and senior network expert.
+                    I'm always looking for new challenges and opportunities to learn new things.
+                    I'm a big fan of open source, and I'm always looking for ways to contribute to the community.
+                    I'm currently working on a few projects that I'm excited to share with you.
+                </p>
+            </div>
+            <div class="projects">
+                <h2>Projects</h2>
+                <div class="project" id="projects">
+                    <h3>Project 1</h3>
+                    <p>Project 1 is a project that I'm currently working on. It's a web application that allows users to create and share their own projects. I'm using React.js and Node.js to build the front and back end of the application. I'm also using MongoDB to store the data for the application. I'm excited to share this project with you, and I hope you enjoy using it as much as I enjoy building it.</p>
+                </div>
+                <div class="project">
+                    <h3>Project 2</h3>
+                    <p>Project 2 is a project that I recently completed. It's a web application that allows users to create and share their own projects. I used React.js and Node.js to build the front and back end of the application. I also used MongoDB to store the data for the application. I'm proud of this project, and I hope you enjoy using it as much as I enjoyed building it.</p>
+                </div>
+                <div class="project">
+                    <h3>Project 3</h3>
+                    <p>Project 3 is a project that I'm currently working on. It's a web application that allows users to create and share their own projects. I'm using React.js and Node.js to build the front and back end of the application. I'm also using MongoDB to store the data for the application. I'm excited to share this project with you, and I hope you enjoy using it as much as I enjoy building it.</p>
+                </div>
+            </div>
         </div>
+
     </main>
 </body>
 </html>
